--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
-.intro-background {
+div.intro-background {
   background-color: pink;
   border-radius: 2px;
   height: 100px;
   width: 500px;
-  padding: 100px, 100px, 100px, 100px;
+  padding: 20px 20px 20px 20px;
 }
